--- a/setup.cfg
+++ b/setup.cfg
@@ -6,3 +6,8 @@ disallow_untyped_defs = true
 no_implicit_optional = true
 warn_redundant_casts = true
 warn_unused_ignores = true
+[tool:pytest]
+minversion = 6.0
+addopts = -ra -q
+rootpath = .
+python_files = *.py
